Changing from .NET Standard 2.1 to .NET Standard 2.0 to support more platforms

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,7 +7,7 @@ on:
 env:
   TITLE: "Dynamic Thread-Safe Objects"
   DESCRIPTION: "A combination of generic Dynamic Thread-Safe objects that can be used in all application types."
-  TAGS: "thunderdesign dynamic threading net"
+  TAGS: "thunderdesign dynamic visual%2Dstudio c%2Dsharp dotnet%2Dstandard dotnet%2Dframework dotnet%2Dcore cross%2Dplatform pcl%2Dlibrary mono xamarin%2Dforms xamarin%2Dandroid xamarin%2Dios xamarin%2Dmac xamarin%2Duwp unity csharp net dotnet threading bindable binding"
   #FILE_NAME: ex: "ThunderDesign.Net-PCL.Dynamic"
   FILE_NAME: "${{ github.event.repository.name }}"
   #REPOSITORY_NAME: ex: "ThunderDesign.Net-PCL.Dynamic"
@@ -30,10 +30,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
-    - name: Setup .NET 3.0
+    - name: Setup .NET 2.0
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.0.x
+        dotnet-version: 2.0.x
         
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.1
