--- a/src/ThunderDesign.Net-PCL.Dynamic/ThunderDesign.Net-PCL.Dynamic.csproj
+++ b/src/ThunderDesign.Net-PCL.Dynamic/ThunderDesign.Net-PCL.Dynamic.csproj
@@ -1,10 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard1.0;netstandard2.0;net461</TargetFrameworks>
 		<RootNamespace>ThunderDesign.Net_PCL.Dynamic</RootNamespace>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" '$(TargetFramework)' == 'net461' ">
+		<DefineConstants>NETSTANDARD1_4</DefineConstants>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ThunderDesign.Net-PCL.Threading" Version="1.0.5" />
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="ThunderDesign.Net-PCL.Threading" Version="1.0.6" />
 	</ItemGroup>
 </Project>
